--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,9 +2,10 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://blowfish.page/docs/getting-started/
 
-theme = "blowfish"
+theme = ["hugo-embed-pdf-shortcode", "blowfish"]
 baseURL = "https://www.andreasrubik.com/"
 defaultContentLanguage = "en"
+enableInlineShortcodes = true
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
 
