added favicon, initial articles, assets etc.

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -6,8 +6,8 @@ weight = 1
 rtl = false
 
 title = "andreasrubik.com"
-# logo = "img/logo.png"
-# secondaryLogo = "img/secondary-logo.png"
+logo = "/img/logo.png"
+secondaryLogo = "/img/logo.png"
 # description = "My awesome website"
 # copyright = "Copy, _right?_ :thinking_face:"
 
@@ -16,8 +16,8 @@ dateFormat = "2 January 2006"
 [author]
   name = "Andreas Rubik"
   image = "img/author.png"
-  headline = "I'm only human"
-  bio = "A little bit about you"
+  headline = "Java Developer with an interest in computer security, cooking and videogames"
+#  bio = "Java Developer with an interest in computer security, cooking and videogames"
   links = [
     { email = "mailto:mail@andreasrubik.com" },
 #     { link = "https://link-to-some-website.com/" },
@@ -31,7 +31,7 @@ dateFormat = "2 January 2006"
 #     { facebook = "https://facebook.com/username" },
 #     { flickr = "https://www.flickr.com/photos/username/" },
 #     { foursquare = "https://foursquare.com/username" },
-    { github = "https://github.com/Rubikan" },
+     { github = "https://github.com/Rubikan" },
 #     { gitlab = "https://gitlab.com/username" },
 #     { google = "https://www.google.com/" },
 #     { hashnode = "https://username.hashnode.dev" },
@@ -39,7 +39,7 @@ dateFormat = "2 January 2006"
 #     { keybase = "https://keybase.io/username" },
 #     { kickstarter = "https://www.kickstarter.com/profile/username" },
 #     { lastfm = "https://lastfm.com/user/username" },
-#     { linkedin = "https://linkedin.com/in/username" },
+     { linkedin = "https://linkedin.com/in/username" },
 #     { mastodon = "https://mastodon.instance/@username" },
 #     { medium = "https://medium.com/username" },
 #     { microsoft = "https://www.microsoft.com/" },
@@ -51,13 +51,13 @@ dateFormat = "2 January 2006"
 #     { slack = "https://workspace.url/team/userid" },
 #     { snapchat = "https://snapchat.com/add/username" },
 #     { soundcloud = "https://soundcloud.com/username" },
-#     { stack-overflow = "https://stackoverflow.com/users/userid/username" },
+     { stack-overflow = "https://stackoverflow.com/users/4185978/rubikan" },
 #     { steam = "https://steamcommunity.com/profiles/userid" },
 #     { telegram = "https://t.me/username" },
 #     { tiktok = "https://tiktok.com/@username" },
 #     { tumblr = "https://username.tumblr.com" },
 #     { twitch = "https://twitch.tv/username" },
-#     { twitter = "https://twitter.com/username" },
+     { twitter = "https://twitter.com/_Rubikan_" },
 #     { whatsapp = "https://wa.me/phone-number" },
 #     { youtube = "https://youtube.com/username" },
 #     { ko-fi = "https://ko-fi.com/username" },
