--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -16,9 +16,14 @@
   weight = 10
 
 [[main]]
+  name = "Posts"
+  pageRef = "posts"
+  weight = 20
+
+[[main]]
   name = "Resume"
   pageRef = "resume"
-  weight = 20
+  weight = 30
 
 #[[main]]
 #  name = "Parent"
