--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -5,9 +5,9 @@ isoCode = "en"
 weight = 1
 rtl = false
 
-title = "andreasrubik.com"
-logo = "/img/logo.png"
-secondaryLogo = "/img/logo.png"
+title = "Andreas Rubik"
+logo = "img/logo.png"
+secondaryLogo = "img/logo.png"
 # description = "My awesome website"
 # copyright = "Copy, _right?_ :thinking_face:"
 
