--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -35,8 +35,8 @@ smartTOCHideUnfocusedChildren = true
   showScrollToTop = true
 
 [homepage]
-  layout = "profile" # valid options: page, profile, hero, card, background, custom
-  #homepageImage = "IMAGE.jpg" # used in: hero, and card
+  layout = "hero" # valid options: page, profile, hero, card, background, custom
+  homepageImage = "/img/homepage.png" # used in: hero, and card
   showRecent = false
   showRecentItems = 5
   showMoreLink = false
