--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           hugo-version: "0.96.0"
 
       - name: Build
-        run: hugo --minify
+        run: hugo
         
       - name: Copy via scp
         uses: appleboy/scp-action@v0.1.4
