--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -37,7 +37,7 @@ smartTOCHideUnfocusedChildren = true
 [homepage]
   layout = "hero" # valid options: page, profile, hero, card, background, custom
   homepageImage = "/img/homepage.png" # used in: hero, and card
-  showRecent = false
+  showRecent = true
   showRecentItems = 5
   showMoreLink = false
   showMoreLinkDest = "/posts"
