--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,13 +10,13 @@ enableInlineShortcodes = true
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
 
 enableRobotsTXT = true
-paginate = 10
+pagerSize = 10
 summaryLength = 0
 
 buildDrafts = false
 buildFuture = false
 
-# googleAnalytics = "G-XXXXXXXXX"
+# googleAnalytics = "G-XXXXXXXXX"
 
 [imaging]
   anchor = 'Center'
