--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -2,20 +2,24 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://blowfish.page/docs/getting-started/
 
+#theme = "blowfish" # Not needed when used as hugo mod
 baseURL = "https://www.andreasrubik.com/"
 defaultContentLanguage = "en"
-enableInlineShortcodes = true
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
 
 enableRobotsTXT = true
-pagerSize = 10
 summaryLength = 0
 
 buildDrafts = false
 buildFuture = false
 
+enableEmoji = true
+
 # googleAnalytics = "G-XXXXXXXXX"
+
+[pagination]
+  pagerSize = 10
 
 [imaging]
   anchor = 'Center'
