--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,6 @@ name: Build Container
     branches:
       - main
 
-env:
-  REPO: ${GITHUB_REPOSITORY,,}
-
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -37,5 +34,5 @@ jobs:
             BUILDKIT_CONTEXT_KEEP_GIT_DIR=true
             GH_ACCESS_TOKEN=${{ secrets.GH_ACCESS_TOKEN }}
           tags: |
-            ghcr.io/${{ env.REPO }}:${{ github.ref_name }}
-            ghcr.io/${{ env.REPO }}:latest
+            ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+            ghcr.io/${{ github.repository }}:latest
